<resources>
    <string name="app_name">My Anime Favorit</string>
    <string name="anime_name">Nama Anime</string>
    <string name="description">Deskripsi Anime</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="rating_9_0">Rating: 9.0</string>
    <string name="genre">Genre</string>
    <string name="watching">Watching</string>
    <string name="share">Share</string>
    <string name="user">User</string>
    <string name="profile_image">Profile Image</string>
    <string name="my_name">Muhammad Alif Leo</string>
    <string name="my_profile">My Profile</string>
    <string name="my_email">muhammadalifleo@gmail.com</string>
    <string name="about_me">Saya adalah mahasiswa semester 7 jurusan Teknik Informatika dan Komputer yang mengikuti program Bangkit Academy dengan fokus pada pengembangan mobile (Mobile Development). Saya juga merupakan penerima beasiswa dari Bank Indonesia, yang telah memberi saya dukungan untuk mencapai potensi penuh di bidang akademik dan pengembangan diri. Selain itu, saya merupakan anggota Generasi Baru Indonesia (GenBI), di mana saya aktif dalam berbagai kegiatan sosial dan pengembangan masyarakat. Dengan latar belakang ini, saya berharap dapat terus berkembang dan berkontribusi dalam dunia teknologi serta memberi dampak positif bagi masyarakat.</string>
    <string-array name="data_anime">
        <item>Naruto Shippuden</item>
        <item>Kimetsu No yaiba</item>
        <item>Bleach</item>
        <item>Hunter x Hunter</item>
        <item>One Piece</item>
        <item>Jujutsu Kaisen</item>
        <item>Black Clover</item>
        <item>Fairy Tail</item>
        <item>Spy x Family</item>
        <item>Assassination Classroom</item>
        <item>Kuroko no basket</item>
        <item>My hero Academia</item>
        <item>Dr. Stone</item>
        <item>Dragon Ball Z</item>
        <item>Sword Art Online</item>
    </string-array>
    <string-array name="data_rating">
        <item>9.9</item>
        //naruto
        <item>8.6</item>
        //kimetsu
        <item>9.4</item>
        //Bleach
        <item>9.5</item>
        //Hunter x Hunter
        <item>9.8</item>
        //One Piece
        <item>8.9</item>
        //jujutsu
        <item>8.9</item>
        //black clover
        <item>9.1</item>
        //fairy tail
        <item>8.8</item>
        //spy x family
        <item>9.6</item>
        //assassination classroom
        <item>8.8</item>
        //kuroko no basket
        <item>8.9</item>
        //my hero academia
        <item>9.0</item>
        // dr stone
        <item>9.5</item>
        //dragon ball z
        <item>8.9</item>
        //sword art online
    </string-array>
    <string-array name="data_genre">
        <item>Action, Adventure, Fantasy</item> 
        <item>Action, Supernatural, Historical</item> 
        <item>Action, Supernatural, Thriller</item> 
        <item>Action, Adventure, Fantasy</item> 
        <item>Action, Adventure, Comedy</item> 
        <item>Action, Supernatural, Thriller</item> 
        <item>Action, Fantasy, Magic</item> 
        <item>Action, Adventure, Fantasy</item> 
        <item>Action, Comedy, Spy</item> 
        <item>Action, Comedy, Supernatural</item> 
        <item>Sports, Drama, Comedy</item> 
        <item>Action, Superpower, School</item> 
        <item>Adventure, Sci-Fi, Post-Apocalyptic</item> 
        <item>Action, Adventure, Superpower</item> 
        <item>Action, Adventure, Fantasy</item> 
    </string-array>
    <string-array name="data_photo">
        <item>@drawable/naruto_shippuden</item>
        <item>@drawable/kimetsu_no_yaiba</item>
        <item>@drawable/bleach</item>
        <item>@drawable/hunter_x_hunter</item>
        <item>@drawable/one_piece</item>
        <item>@drawable/jujutsu_kaisen</item>
        <item>@drawable/black_clover</item>
        <item>@drawable/fairy_tail</item>
        <item>@drawable/spy_x_family</item>
        <item>@drawable/assassination_classroom</item>
        <item>@drawable/kuroko_no_basket</item>
        <item>@drawable/my_hero_academia</item>
        <item>@drawable/dr_stone</item>
        <item>@drawable/dragon_ball_z</item>
        <item>@drawable/sword_art_online</item>
    </string-array>
</resources>