<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/anime_image"
            android:layout_width="190dp"
            android:layout_height="260dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars"/>

        <TextView
            android:id="@+id/anime_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/anime_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:ellipsize="end"
            android:maxLines="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/anime_image"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/anime_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:justificationMode="inter_word"
            android:paddingTop="8dp"
            android:text="@string/description"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/anime_image" />

        <TextView
            android:id="@+id/anime_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="Genre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/anime_image"
            app:layout_constraintTop_toBottomOf="@+id/anime_title" />

        <TextView
            android:id="@+id/anime_rating_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Rating: 9.0"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/anime_image"
            app:layout_constraintTop_toBottomOf="@id/anime_genre" />

        <!-- Tombol Watching -->

        <!-- Tombol Share -->
        <Button
            android:id="@+id/btn_watching"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:padding="0dp"
            android:text="@string/watching"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/action_share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/anime_image"
            app:layout_constraintTop_toBottomOf="@+id/anime_rating_text"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/action_share"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:padding="0dp"
            android:text="@string/share"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/anime_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/anime_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
